# obsidian-tools

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
obsidian_tools/: cli.py  config.py  errors.py
obsidian_tools/integrations/: __init__.py  discogs.py  google_books.py  igdb.py  openai.py  steam.py  tmdb.py
obsidian_tools/plugins/: daily_notes.py
obsidian_tools/templates/bujo/: monthly_log.md  weekly_log.md
obsidian_tools/templates/media/: book.md  tv_show.md
obsidian_tools/toolbox/bujo/: cli.py  models.py  service.py
obsidian_tools/toolbox/bujo/service/: base.py  create.py  summarise.py
obsidian_tools/tools/media/: cli.py  service.py
obsidian_tools/tools/media/clients/: google_books.py  openlibrary.py  tmdb.py
obsidian_tools/utils/: click_utils.py  clock.py  dataclasses.py  decorators.py  http_client.py  humanize.py  momentjs.py  template.py
tests/: conftest.py  test_config.py
tests/example/: example-obsidian-tools-config.toml
tests/integrations/: test_google_books.py  test_openlibrary.py  test_tmdb.py
tests/plugins/: test_daily_notes.py
tests/responses/discogs/: release.json  search.json
tests/responses/google_books/: volumes.json
tests/responses/openlibrary/: author_one.json  author_two.json  edition.json  work.json
tests/responses/tmdb/: movie-details.json  tv-episode-details.json  tv-season-details.json  tv-series-details.json
tests/toolbox/bujo/: test_service.py
tests/tools/media/: test_service.py
tests/utils/: test_clock.py  test_dataclasses.py  test_http_client.py  test_humanize.py  test_momentjs.py
(+9 files in other folders)
