[tool.poetry]
name = "obsidian-tools"
version = "0.1.0"
description = "A collection of CLI tools for interacting with my Obsidian vaults."
authors = ["Myles Braithwaite <me@mylesbraithwaite.com>"]
readme = "README.md"
include = ["obsidian_tools/templates/*"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
jinja2 = "^3.1.4"
python-frontmatter = "^1.1.0"
questionary = "^2.0.1"
requests = "^2.32.3"
sanitize-filename = "^1.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
bpython = "^0.24"
coverage = "^7.9.1"
isort = "^5.13.2"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
responses = "^0.25.3"
ruff = "^0.6.4"
types-requests = "^2.32.0.20240712"

[tool.poetry.scripts]
obsidian-tools = "obsidian_tools.cli:cli"

[tool.ruff]
line-length = 80

[tool.black]
line-length = 80

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["sanitize_filename", "frontmatter"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
